--- a/BookFair/templates/BookFair/cart.html
+++ b/BookFair/templates/BookFair/cart.html
@@ -7,3 +7,40 @@
 
 <!-- Content is loaded directly to webpage past this point -->
 {% block content %}
+
+<div class="shoppingCart">
+  <h2>My Cart</h2>
+
+  <div class="heading">
+    <div class="p_name"><h4>Product's Name</h4></div>
+    <div class="name"><h4>Quantity</h4></div>
+    <div class="name"><h4>Unit Price</h4></div>
+    <div class="name"><h4>Prize</h4></div>
+  </div>
+
+  <div class="itemContainer">
+
+    {% for item in items %}
+    <div class="item">
+      <div class="iteminfo">
+        <div class="p_img">
+          <img src="{{item.product.picture.url}}" alt="" />
+        </div>
+        <p>{{item.product.name}}</p>
+      </div>
+
+      <div class="name"><p>{{item.quantity}}</p></div>
+      <div class="name"><p>${{item.product.price}}</p></div>
+      <div class="name"><p>${{item.price}}</p></div>
+    </div>
+
+    {% endfor %}
+  </div>
+
+  <div class="pay-section">
+    <h3>Grand-Total: ${{cart.total_price}}</h3>
+    <button onclick = "makePayment()" >Pay</button>
+  </div>
+</div>
+
+{% endblock content %}
