--- a/BookFair/templates/BookFair/cart_detail.html
+++ b/BookFair/templates/BookFair/cart_detail.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% load mathfilters %`}
+
 {% block content %}
 
 	{% if cart_items %}
@@ -18,6 +21,7 @@
 						 <td>{{ item.product }}</td>
 						<td>{{ item.quantity }}</td>
 						<td>{{ item.product.prod_price }}</td>
+					   <td>{{ item.quantity|mul:item.product.prod_price }}</td>
 						<td><a href="{% url 'cart:remove_cart_from_cart' item.id%}">Remove</a></td>
 					</tr>
 				{% endfor %}
@@ -26,7 +30,7 @@
 				<tr>
 					<td colspan = "3"></td>
 					<td>Total:</td>
-					<td>{{ total_item_prices[ forloop.counter0 ] }}</td>
+					<td>{{ total_price }}</td>
 				</tr>
 			</tfoot>
 		</table>
