changed all the urls to match what need
made a working add to cart but no working payment, remove, or view and I don't know if images still work

--- a/BookFair/templates/BookFair/login.html
+++ b/BookFair/templates/BookFair/login.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col-12 d-flex justify-content-center align-items-center gap-3 mt-5">
         <p class="fs-4 text-secondary">
-            Find your profile <a href="{% url 'profile' %}">here.</a>
+            Find your profile <a href="{% url 'BookFair:profile' %}">here.</a>
         </p>
     </div>
 </div>
@@ -52,7 +52,7 @@
     </div>
     <div class="row">
         <div class="col-12 p-5">
-            <p>No account? <a href="{% url 'signup' %}">Sign up!</a></p>
+            <p>No account? <a href="{% url 'BookFair:signup' %}">Sign up!</a></p>
         </div>
     </div>
 </div>
