--- a/BookFair/templates/BookFair/logout.html
+++ b/BookFair/templates/BookFair/logout.html
@@ -14,11 +14,11 @@
     </div>
     <div class="col-12 d-flex justify-content-center align-items-center gap-3 mt-5">
         <p class="fs-4 text-secondary">
-            If you'd like to sign back in, <a href="{% url 'login' %}">log in here.</a>
+            If you'd like to sign back in, <a href="{% url 'BookFair:login' %}">log in here.</a>
         <br>
             If you arrived at this page by accident, you'll have to sign in again.
         <br>
-            If you don't have an account, <a href="{% url 'signup' %}">you can sign up here.</a>
+            If you don't have an account, <a href="{% url 'BookFair:signup' %}">you can sign up here.</a>
         </p>
     </div>
 </div>
