--- a/BookFair/templates/BookFair/category.html
+++ b/BookFair/templates/BookFair/category.html
@@ -18,11 +18,11 @@
           Sort by
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="{% url 'category' category.cat_id %}?sort=name">Name</a></li>
-          <li><a class="dropdown-item" href="{% url 'category' category.cat_id %}?sort=price-lh">Price, low to high</a></li>
-          <li><a class="dropdown-item" href="{% url 'category' category.cat_id %}?sort=price-hl">Price, high to low</a></li>
-          <li><a class="dropdown-item" href="{% url 'category' category.cat_id %}?sort=stock-lh">In stock, low to high</a></li>
-          <li><a class="dropdown-item" href="{% url 'category' category.cat_id %}?sort=stock-hl">In stock, high to low</a></li>
+          <li><a class="dropdown-item" href="{% url 'BookFair:category' category.cat_id %}?sort=name">Name</a></li>
+          <li><a class="dropdown-item" href="{% url 'BookFair:category' category.cat_id %}?sort=price-lh">Price, low to high</a></li>
+          <li><a class="dropdown-item" href="{% url 'BookFair:category' category.cat_id %}?sort=price-hl">Price, high to low</a></li>
+          <li><a class="dropdown-item" href="{% url 'BookFair:category' category.cat_id %}?sort=stock-lh">In stock, low to high</a></li>
+          <li><a class="dropdown-item" href="{% url 'BookFair:category' category.cat_id %}?sort=stock-hl">In stock, high to low</a></li>
         </ul>
       </div>
 </div>
@@ -33,7 +33,7 @@
             {% for product in cat_products %}
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="card">
-                        <a href="{% url 'product' product.prod_id %}">
+                        <a href="{% url 'BookFair:product' product.prod_id %}">
                             {% if product.prod_img %}
                                 <img class="card-img-top" src="{{ product.prod_img.url }}">
                             {% else %}
