--- a/BookFair/templates/BookFair/home.html
+++ b/BookFair/templates/BookFair/home.html
@@ -22,7 +22,7 @@
             {% for product in featured_products %}
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="card">
-                        <a href="{% url 'product' product.prod_id %}">
+                        <a href="{% url 'BookFair:product' product.prod_id %}">
                             {% if product.prod_img %}
                                 <img class="card-img-top" src="{{ product.prod_img.url }}">
                             {% else %}
