--- a/BookFair/templates/BookFair/product.html
+++ b/BookFair/templates/BookFair/product.html
@@ -27,9 +27,13 @@
                     <span class="badge bg-primary-subtle text-uppercase mb-2">{{ product.cat.cat_name }}</span>
                     <p class="card-text">{{ product.prod_descript }}</p>
                     <p><strong>Price: </strong>${{ product.prod_price }}</p>
-                    <!-- Check in stock -->
+                    <!---- form start-->
+                    <form method="post" action="{% url 'BookFair:product' product.prod_id %}">
+                    {% csrf_token %}
+                    <!-- Check in stock dog -->
                     {% if product.prod_stock > 0 %}
-                        <button class="btn bg-primary text-light btn-block">
+                      <button class="btn bg-primary text-light btn-block">
+                     <!--   <button class="btn bg-primary text-light btn-block" value="{{ product.prod_id}}"> -->
                             {% bs_icon 'cart-plus-fill' color='white' size='1.25em' %}
                             Add to Cart
                         </button>
@@ -41,6 +45,8 @@
                         </button>
                         <p class="card-text mt-3">No stock available :&#40; Check back soon!</p>
                     {% endif %}
+                    </form>
+                    <!-- form end -->
                 </div>
             </div>
         </div>
