--- a/BookFair/templates/BookFair/profile.html
+++ b/BookFair/templates/BookFair/profile.html
@@ -34,7 +34,7 @@
             <div class="card-body">
                 <h3 class="card-title">{{ user.username }}</h3>
                 <h4 class="card-subtitle">{{ user.email }}</h4>
-                <a href="{% url 'logout' %}">
+                <a href="{% url 'BookFair:logout' %}">
                     <button type="button" class="mt-3 btn btn-outline-danger">Sign out</button>
                 </a>
             </div>
@@ -53,9 +53,9 @@
     </div>
     <div class="col-12 d-flex justify-content-center align-items-center gap-3 mt-5">
         <p class="fs-4 text-secondary">
-            If you have an account, <a href="{% url 'login' %}">log in here.</a>
+            If you have an account, <a href="{% url 'BookFair:login' %}">log in here.</a>
         <br>
-            If you would like to register, <a href="{% url 'signup' %}">sign up for an account here.</a>
+            If you would like to register, <a href="{% url 'BookFair:signup' %}">sign up for an account here.</a>
         </p>
     </div>
 {% endif %}
