--- a/BookFair/templates/base.html
+++ b/BookFair/templates/base.html
@@ -22,7 +22,7 @@
         {% block navbar %}
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">
+                <a class="navbar-brand" href="{% url 'BookFair:home' %}">
                     {% load static %}
                     <img src="{% static 'BookFair/svg/logo-outline.svg' %}" height="40px" alt="eBookFair">
                 </a>
@@ -33,18 +33,19 @@
                     <!-- Categories -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                          <a class="nav-link text-light" aria-current="page" href="{% url 'home' %}">Home</a>
+                          <a class="nav-link text-light" aria-current="page" href="{% url 'BookFair:home' %}">Home</a>
                         </li>
                         {% if categories_dict %}
                             {% for category in categories_dict %}
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" aria-current="page" href="{% url 'category' category.cat_id %}">{{ category.cat_name }}</a>
+                                    <a class="nav-link text-light" aria-current="page" href="{% url 'BookFair:category' category.cat_id %}">{{ category.cat_name }}</a>
                                 </li>
                             {% endfor %}
                         {% endif %}
+                        <a class="nav-link text-light" aria-current="page" href="{% url 'BookFair:cart_detail' %}">Cart</a>
                     </ul>
                     <!-- Search -->
-                    <form class="d-flex ms-auto search-box" role="search" id="nav-search-box" action="{% url 'search' %}">
+                    <form class="d-flex ms-auto search-box" role="search" id="nav-search-box" action="{% url 'BookFair:search' %}">
                         {{ search_form_nav.q }}
                         <button class="btn bg-primary-subtle" type="submit">{% bs_icon 'search' color='white' size='1.25em' %}</button>
                     </form>
@@ -53,14 +54,14 @@
                     <div id="navbar-col-spacer" class="d-none d-lg-block"></div>
                     <!-- Profile -->
                     {% if user.is_authenticated %}
-                        <a href="{% url 'profile' %}">
+                        <a href="{% url 'BookFair:profile' %}">
                             <button class="btn bg-primary-subtle w-100">
                                 {% bs_icon 'person-fill' color='white' size='1.25em' %}
                                 <span class="d-inline d-lg-none text-light mx-1">My account</span>
                             </button>
                         </a>
                     {% else %}
-                    <a href="{% url 'login' %}">
+                    <a href="{% url 'BookFair:login' %}">
                         <button class="btn bg-primary-subtle w-100">
                             {% bs_icon 'person-fill' color='white' size='1.25em' %}
                             <span class="d-inline d-lg-none text-light mx-1">Log in</span>
