--- a/BookFair/templates/base.html
+++ b/BookFair/templates/base.html
@@ -42,7 +42,7 @@
                                 </li>
                             {% endfor %}
                         {% endif %}
-                        <a class="nav-link text-light" aria-current="page" href="{% url 'BookFair:cart_detail' %}">Cart</a>
+                      <!--  <a class="nav-link text-light" aria-current="page" href="{% url 'BookFair:cart_detail' %}">Cart</a> -->
                     </ul>
                     <!-- Search -->
                     <form class="d-flex ms-auto search-box" role="search" id="nav-search-box" action="{% url 'BookFair:search' %}">
